<resources>
    <string name="app_name">Koken</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Food Joke</string>

    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>


    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="share">Share</string>
    <string name="image_view">Image View</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="txt_email">Please enter your email</string>
    <string name="password">Password</string>
    <string name="txt_password">Please enter your password</string>
    <string name="text_sign_in_button">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="fullname">Fullname</string>
    <string name="txt_fullname">Please enter your fullname</string>
    <string name="username">Username</string>
    <string name="txt_username">Please enter your username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="txt_confirm_password">Please confirm your password</string>
    <string name="text_regis_button">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="txt_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="email_profile">Email</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_account">Change Account</string>
    <string name="language">Language</string>
    <string name="setting">Settings</string>
    <string name="privacy_and_setting">Privacy and Settings</string>
    <string name="logout">Logout</string>
</resources>